--- a/css/index.css
+++ b/css/index.css
@@ -1,29 +1,25 @@
 /* General Custom Styles */
-
 * {
-    margin: 0;
-    padding: 0;
-    font-family: sans-serif;
-    box-sizing: border-box;
-    font-size: 62,5%;
-}
+  margin: 0;
+  padding: 0;
+  font-family: sans-serif;
+  box-sizing: border-box;
+  font-size: 62,5%; }
 
 body {
-    padding-top: 12rem;
-    background-color: #e6e6e6 !important;
-}
-/* Footer */
+  padding-top: 12rem;
+  background-color: #e6e6e6 !important; }
 
+/* Footer */
 footer .bg-purple {
-    background-color: #505477;
-}
-footer .bg-grey{
-    background-color: #39393a;
-}
+  background-color: #505477; }
+
+footer .bg-grey {
+  background-color: #39393a; }
+
 footer .footer-icon {
-    width: 3rem;
-    height: 3rem;
-    border-radius: 50%;
-    position: absolute;
-    top: -1.5rem;
-}
+  width: 3rem;
+  height: 3rem;
+  border-radius: 50%;
+  position: absolute;
+  top: -1.5rem; }
